# Programming-challenges

./: Markov.hs  haskell1.hs
Laurent/Challenge-270/: .gitignore  Markov.lkshs  Markov.lkshw
Laurent/Challenge-270/Main/: Main.cabal  source.txt
Laurent/Challenge-270/Main/src/: Main.hs  Markov.hs
Laurent/Challenge-270/Main/test/: Main.hs  Markov.hs  MarkovTest.hs
MarkovProcess/: test.lkshs  test.lkshw
MarkovProcess/MarkovProcess/: MarkovProcess.cabal
MarkovProcess/MarkovProcess/src/: Main.hs  source.txt
MarkovProcess/MarkovProcess/src/Markov/: Functions.hs
MarkovProcess/MarkovProcess/test/: Main.hs
MarkovProcess/src/: Main.hs  Markov.hs
MarkovProcess/src/Markov/: Functions.hs
MarkovProcess/test/: Main.hs
