name: Main
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
maintainer: Laurent Ferier
stability: Under development
synopsis: Creating text using markov processes
description:
    This program is used to create a text using Markov processes
category: Personal Training
author: Laurent Ferier

executable Main
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        random -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Markov
    ghc-options: -ferror-spans

test-suite test-Main
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        random -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Markov
    ghc-options: -ferror-spans
